--- a/app/src/main/res/layout/activity_final_page.xml
+++ b/app/src/main/res/layout/activity_final_page.xml
@@ -170,7 +170,16 @@ android:id="@+id/time"
 android:id="@+id/panCard"
                 android:textStyle="bold" />
         </LinearLayout>
-        <include layout="@layout/card_ads_box"/>
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewFinal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="400x250"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
