--- a/app/src/main/res/layout/activity_loan_step1.xml
+++ b/app/src/main/res/layout/activity_loan_step1.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-        <include layout="@layout/card_ads_box"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -84,7 +83,15 @@
                 android:text="@string/next" />
         </LinearLayout>
 
-        <include layout="@layout/card_ads_box"/>
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewStep1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="400x250"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
     </LinearLayout>
 
 </RelativeLayout>
