--- a/app/src/main/res/layout/activity_loan_step2.xml
+++ b/app/src/main/res/layout/activity_loan_step2.xml
@@ -64,8 +64,15 @@
             android:layout_height="200dp"
             android:layout_margin="10dp"
             android:background="@drawable/card_backgr">
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adViewStep2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                ads:adSize="400x250"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
-            <include layout="@layout/card_ads_box"/>
         </LinearLayout>
 
         <LinearLayout
@@ -90,7 +97,15 @@
                 android:text="@string/next" />
 
         </LinearLayout>
-        <include layout="@layout/card_ads_box"/>
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewStep3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="400x250"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
     </LinearLayout>
 </ScrollView>
 </RelativeLayout>
