--- a/app/src/main/res/layout/activity_loan_step4.xml
+++ b/app/src/main/res/layout/activity_loan_step4.xml
@@ -65,8 +65,15 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/card_backgr">
 
+                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adViewStep8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    ads:adSize="400x250"
+                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
-                <include layout="@layout/card_ads_box"/>
             </LinearLayout>
 
             <LinearLayout
@@ -91,8 +98,15 @@
                     android:text="@string/next" />
 
             </LinearLayout>
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adViewStep9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                ads:adSize="400x250"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
-            <include layout="@layout/card_ads_box"/>
         </LinearLayout>
 
     </ScrollView>
