--- a/app/src/main/res/layout/activity_loan_step3.xml
+++ b/app/src/main/res/layout/activity_loan_step3.xml
@@ -64,7 +64,15 @@
             android:orientation="vertical"
             android:background="@drawable/card_backgr">
 
-            <include layout="@layout/card_ads_box"/>
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adViewStep4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                ads:adSize="400x250"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -89,7 +97,16 @@
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
-        <include layout="@layout/card_ads_box"/>
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewStep6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="400x250"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
     </LinearLayout>
     </ScrollView>
 </RelativeLayout>
