--- a/app/src/main/res/layout/activity_term_condition.xml
+++ b/app/src/main/res/layout/activity_term_condition.xml
@@ -27,6 +27,16 @@
                 android:fontFamily="sans-serif"
                 android:text="@string/t__condition"
                 />
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewStep14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="400x250"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
