--- a/app/src/main/res/layout/activity_loan_step3.xml
+++ b/app/src/main/res/layout/activity_loan_step3.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center"
         android:visibility="visible">
 
         <TextView
@@ -62,6 +63,7 @@
             android:layout_height="200dp"
             android:layout_margin="10dp"
             android:orientation="vertical"
+            android:gravity="center"
             android:background="@drawable/card_backgr">
 
             <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
