--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <include
+            layout="@layout/card_apply_now"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp" />
 <LinearLayout
     android:layout_width="match_parent"
     android:gravity="center"
@@ -31,8 +36,7 @@
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
 </LinearLayout>
-
-        <include layout="@layout/new_launch"/>
+        <include layout="@layout/home_loan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
@@ -49,7 +53,7 @@
 
         </LinearLayout>
         <include layout="@layout/personal_loan"/>
-        <include layout="@layout/home_loan"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
@@ -65,7 +69,7 @@
                 ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
         </LinearLayout>
-        <include layout="@layout/mutual_fund"/>
+        <include layout="@layout/cash_loan"/>
     </LinearLayout>
 
     </ScrollView>
