--- a/app/src/main/res/layout/dot_loader.xml
+++ b/app/src/main/res/layout/dot_loader.xml
@@ -2,20 +2,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:id="@+id/dotLoader"
+    android:layout_margin="20dp"
+    android:background="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="20dp">
-   <androidx.cardview.widget.CardView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:cardCornerRadius="10dp"
-       app:cardElevation="5dp">
+    >
+
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
+           android:gravity="center"
+           android:padding="10dp"
            android:orientation="vertical">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAllCaps="false"
+    android:textAlignment="center"
+    android:fontFamily="sans-serif"
+    android:textSize="30sp"
+    android:textStyle="bold"
+    android:text="Ad Loading Please Wait"/>
 
+           <pl.droidsonroids.gif.GifImageView
+               android:layout_width="84dp"
+               android:layout_height="75dp"
+               android:src="@drawable/dot_loader" />
+
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textAllCaps="false"
+               android:textAlignment="center"
+
+               android:fontFamily="sans-serif"
+               android:textSize="18sp"
+               android:textStyle="bold"
+               android:text="This waring dialog is for you to not\n accidentally click on advertisement"/>
        </LinearLayout>
-   </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
